<resources>
    <string name="app_name">Simple Draw</string>
    <string name="app_launcher_name">Draw</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="saving_error">Could not save the file</string>
    <string name="saving_ok">Image has been saved successfully</string>
    <string name="file_name">File name</string>
    <string name="save_file">Save file</string>
    <string name="enter_file_name">Please enter a file name</string>
    <string name="no_permissions">Could not save the file without accessing the external storage</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="save_formats" translatable="false">
        <item>.png</item>
        <item>.svg</item>
    </string-array>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="brush_size">Show brush size tool</string>
    <string name="clear">Clear</string>
    <string name="change_background">Change background</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="website">More simple apps and source code at:\nhttp://simplemobiletools.com</string>
    <string name="email_label">Send your feedback or suggestions to:</string>
    <string name="email" translatable="false">hello@simplemobiletools.com</string>
    <string name="third_party_licences_underlined"><u>Third party licences</u></string>
    <string name="invite_friends_underlined"><u>Invite friends</u></string>
    <string name="share_text">Hey, come check out %1$s at %2$s</string>
    <string name="invite_via">Invite via</string>
    <string name="rate_us_underlined"><u>Rate us in the Play Store</u></string>
    <string name="follow_us">Follow us:</string>
    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>

    <!-- License -->
    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you.</string>
    <string name="third_party_licences">Third party licences</string>
    <string name="butterknife_title"><u>Butter Knife (view injector)</u></string>
    <string name="butterknife_text" translatable="false">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="butterknife_url" translatable="false">https://github.com/JakeWharton/butterknife</string>
    <string name="ambilwarna_title"><u>AmbilWarna (color picker)</u></string>
    <string name="ambilwarna_text" translatable="false">Copyright 2009-2015 Yuku\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="ambilwarna_url" translatable="false">https://github.com/yukuku/ambilwarna</string>

    <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
    <string name="app_short_description">A canvas you can draw on with different colors.</string>
    <string name="app_long_description">
        Want to draw something but you have no paper? This app will suit you perfectly. Just pick a color and draw. You can either save the drawing or share it directly through email or social networks.


        Contains no ads or unnecessary permissions. It is fully opensource, provides a Dark theme too.

        This app is just one piece of a bigger series of apps. You can find the rest of them at http://www.simplemobiletools.com
    </string>
</resources>
