<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@mipmap/save"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@mipmap/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_color_picker"
        android:icon="@mipmap/color_picker"
        android:title="@string/undo"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_undo"
        android:icon="@mipmap/undo"
        android:title="@string/undo"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/clear"
        android:title="@string/clear"
        app:showAsAction="never"/>
    <item
        android:id="@+id/change_background"
        android:title="@string/change_background"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
