<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/about_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/website"/>

        <TextView
            android:id="@+id/about_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_website"
            android:text="@string/email_label"/>

        <TextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_email_label"
            android:paddingBottom="1dp"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/about_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_email"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:text="@string/invite_friends_underlined"
            android:textColor="#ff0000"/>

        <TextView
            android:id="@+id/about_rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_invite"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:text="@string/rate_us_underlined"
            android:textColor="#ff0000"/>

        <TextView
            android:id="@+id/about_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_rate_us"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:text="@string/third_party_licences_underlined"
            android:textColor="#ff0000"/>

        <TextView
            android:id="@+id/about_follow_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_license"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:text="@string/follow_us"/>

        <ImageView
            android:id="@+id/about_facebook"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_below="@+id/about_follow_us"
            android:src="@mipmap/facebook"/>

        <ImageView
            android:id="@+id/about_gplus"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_below="@+id/about_follow_us"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/about_facebook"
            android:src="@mipmap/gplus"/>

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/about_gplus"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="16dp"
            android:text="v1.0\nCopyright © Simple Mobile Tools 2016"/>
    </RelativeLayout>
</ScrollView>
